src/ClosedXML.ANTLR/FormulaParser.g4
parser grammar FormulaParser;

options { tokenVocab = FormulaLexer; }

@header {
// ANTLR generated file is marked as a non-CLS compliant, but that is not necessary, because whole assembly is not CLS compliant.
#pragma warning disable 3021
}

/* ----------------------------------------------------------------------------
 *                               PARSER RULES
 * -------------------------------------------------------------------------- */

formula
        : expression EOF
        ;

/* ---------------------------- Expression ---------------------------- */

expression
        : concat_expression ((GREATER_OR_EQUAL_THAN | LESS_OR_EQUAL_THAN | LESS_THAN | GREATER_THAN | NOT_EQUAL | EQUAL) concat_expression)*
        ;

concat_expression
        : additive_expression (CONCAT additive_expression)*
        ;

additive_expression
        : multiplying_expression ((PLUS | MINUS) multiplying_expression)*
        ;

multiplying_expression
        : pow_expression ((MULT | DIV) pow_expression)*
        ;

pow_expression
        : percent_expression (POW percent_expression)*
        ;

percent_expression
        : prefix_atom_expression PERCENT*
        ;

prefix_atom_expression
        : (PLUS | MINUS) prefix_atom_expression
        | atom_expression
        ;

/*
 * Atom is not LL(1), because there are two possible paths for a OPEN_BRACE:
 * * `OPEN_BRACE expression CLOSE_BRACE`
 * * `OPEN_BRACE ref_expression CLOSE_BRACE` through ref_intersection_expression
 * * Of course, it can be nested, so this is the key pain point.
 * It causes issues for expressions like `SUM((A1:A5) (A2:G4))` that should go
 * through ref expressions, but go through normal expression instead
 * and expression doesn't associate reference operations.
 */
atom_expression
        : constant
        | OPEN_BRACE expression CLOSE_BRACE
        | function_call
        | ref_expression
        ;

/* ------------------------- Reference expression -------------------------- */

ref_expression
        : ref_implicit_expression (COMMA ref_implicit_expression)*
        ;

ref_implicit_expression
        : INTERSECT ref_implicit_expression
        | ref_intersection_expression
        ;

/*
 * `@` binds looser than ` ` and `:`, so an operand that starts with `@` takes the
 * rest of the intersection with it: D3:@A1:C2 is D3:(@(A1:C2)). The lexer puts the
 * space before `@` into the INTERSECT token, so after a reference, an INTERSECT with a
 * space is the intersection operator too. The predicate checks the space the same way
 * the recursive descent parser does, see FormulaParser.Predicates.cs.
 */
ref_intersection_expression
        : ref_range_expression (SPACE ref_range_expression)* ({IsSpaceBeforeAt(CurrentToken.Text)}? INTERSECT ref_implicit_expression)?
        ;

ref_range_expression
        : ref_spill_expression (COLON ref_spill_expression)* (COLON INTERSECT ref_implicit_expression)?
        ;

ref_spill_expression
        : ref_atom_expression SPILL?
        ;

/*
 * name_reference and structure_reference are not very unambiguous, e.g.
 * BOOK_PREFIX NAME are a prefix for both.
 * Although #REF!A1 and such is not a valid according to grammar, it is a
 * result of sheet deletion in actual formulas.
 */
ref_atom_expression
        : REF_CONSTANT (a1_reference | REF_CONSTANT)?
        | OPEN_BRACE ref_expression CLOSE_BRACE
        | cell_reference
        | ref_function_call
        | name_reference
        | structure_reference
        | dde_reference
        ;

/* ------------------------------- Constants ------------------------------- */

/*
 * Constant doesn't contain #REF!, because that is in the ref_expressions and
 * by removing it from here, there isn't an ambiguity whether `constant` or
 * `ref_atom_expression` is the correct path from atom. This is pretty edge case
 * anyway and even Excel has bugs there (e.g. `=(A1 ,#REF!)` can't be parsed despite
 * its validity).
 */
constant
        : NONREF_ERRORS
        | LOGICAL_CONSTANT
        | NUMERICAL_CONSTANT
        | STRING_CONSTANT
        | OPEN_CURLY constant_list_rows CLOSE_CURLY
        ;

constant_list_rows
        : constant_list_row (SEMICOLON constant_list_row)*
        ;

constant_list_row
        : (constant | REF_CONSTANT) (COMMA (constant | REF_CONSTANT))*
        ;

/* ---------------------------- Cell references ---------------------------- */

cell_reference
        : a1_reference                                       // local_cell_reference
        | BANG_REFERENCE                                     // external_cell_reference
        | SHEET_RANGE_PREFIX a1_reference                    // external_cell_reference
        | SINGLE_SHEET_PREFIX (a1_reference | REF_CONSTANT)  // external_cell_reference
        // TODO: This is a workaround for the 3D reference aliasing problem
        // (A1:Sheet!B5 were detected as 3D references).
        // This workaround will correctly detect 3D references for sheet names that
        // are not aliases for rows or columns or single cells.
        | NAME COLON SINGLE_SHEET_PREFIX a1_reference        // external_cell_reference
        ;

a1_reference
        : A1_CELL
        | A1_CELL COLON A1_CELL
        | A1_SPAN_REFERENCE
        ;

/* ------------------------------- Arguments ------------------------------- */

// TODO: Argument count should be 0-253, but ANTLR doesn't accept specificic number of repeats
argument_list
        : arg_expression? (COMMA arg_expression?)* CLOSE_BRACE
        ;

/*
 * argExpression is basically a copy of Expression with two important differences:
 * 1. There is no union operator ','. That is because individual arguments are separated by ','
 *    and there would be a confusion whether comma is a union or an arg separator.
 * 2. Once there are braces '('/')', the inner rule is expression or refExpression
 *    because there is no longer any confusion, ',' is a union (i.e. `AREAS((A1,B5))` will
 *    return number 2).
 */
arg_expression
        : arg_concat_expression ((GREATER_OR_EQUAL_THAN | LESS_OR_EQUAL_THAN | LESS_THAN | GREATER_THAN | NOT_EQUAL | EQUAL) arg_concat_expression)*
        ;

arg_concat_expression
        : arg_additive_expression (CONCAT arg_additive_expression)*
        ;

arg_additive_expression
        : arg_multiplying_expression ((PLUS | MINUS) arg_multiplying_expression)*
        ;

arg_multiplying_expression
        : arg_pow_expression ((MULT | DIV) arg_pow_expression)*
        ;

arg_pow_expression
        : arg_percent_expression (POW arg_percent_expression)*
        ;

arg_percent_expression
        : arg_prefix_atom_expression PERCENT?
        ;

arg_prefix_atom_expression
        : (PLUS | MINUS) arg_prefix_atom_expression
        | arg_atom_expression
        ;

/*
 * Official grammar duplicates all ref expression elements, but there is no need
 * to have duplicate rules. It's enough that an argument expression in the first
 * level (=no braces) doesn't have ability to call ',' union operation.
 * Union is at the very top of ref expression hierarchy, so it is enough to
 * use `ref_implicit_expression` in the argument atom here. The nodes below
 * are identical to arg ref nodes to the expression ref nodex.
 */
arg_atom_expression
        : constant
        | OPEN_BRACE expression CLOSE_BRACE
        | function_call
        | ref_implicit_expression
        ;

/*
 * Name reference, where local and external name have been inlined to reduce nesting.
 *
 * [MS-XLSX] 2.2.2.1 forbids the bang name in a cell formula, but the formula of a
 * defined name uses it. A name can't be TRUE or FALSE, but the lexer can't exclude
 * them from the name after the bang. The predicate refuses them the same way the
 * recursive descent parser does, see FormulaParser.Predicates.cs.
 */
name_reference
        : NAME                                                                 // local name
        | (SINGLE_SHEET_PREFIX | BOOK_PREFIX) NAME                             // external name
        | {IsBangName(CurrentToken.Text)}? BANG_NAME                           // bang name
        ;

/* ------------------------- Dynamic data exchange ------------------------- */

/*
 * An item of a dynamic data exchange (DDE) link. Excel stores it after the book
 * prefix of the link ([1]!'item') and displays it after the application and the
 * topic of the link (Sdemo123|tik!'item'), which lex as a sheet prefix. A sheet
 * prefix is a DDE link only when it has no workbook index and a non-empty part on
 * each side of the first |. The predicate checks that the same way the recursive
 * descent parser does, see FormulaParser.Predicates.cs.
 */
dde_reference
        : BOOK_PREFIX DDE_ITEM
        | {IsDdeLinkPrefix(CurrentToken.Text)}? SINGLE_SHEET_PREFIX DDE_ITEM
        ;

/* -------------------------- Structure reference -------------------------- */

structure_reference
        : table_identifier? INTRA_TABLE_REFERENCE
        ;

table_identifier
        : BOOK_PREFIX? table_name
        ;

/* table-name is the name of the table the structure reference refers to. If it
 * is missing, the formula containing the structure reference MUST be entered
 * into a cell which belongs to a table and that table's name is used as the
 * table-name. table-name MUST be the value of the displayName attribute of
 * some table element ([ISO/IEC29500-1:2016] section 18.5.1.2). It MUST NOT be
 * any other user-defined name.
 */
table_name
        : NAME
        ;

/* ---------------------------- Function calls ----------------------------- */

ref_function_call
        : REF_FUNCTION_LIST argument_list
        ;

function_call
        : (/*FUNCTION_LIST | FUTURE_FUNCTION_LIST |*/ CELL_FUNCTION_LIST | (SINGLE_SHEET_PREFIX | BOOK_PREFIX)? USER_DEFINED_FUNCTION_NAME) argument_list
        ;
