src/ClosedXML.ANTLR/FormulaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c://Users//havli//source//repos//ClosedXML.Parser//src//ClosedXML.ANTLR//FormulaParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


// ANTLR generated file is marked as a non-CLS compliant, but that is not necessary, because whole assembly is not CLS compliant.
#pragma warning disable 3021

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class FormulaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		REF_CONSTANT=1, NONREF_ERRORS=2, LOGICAL_CONSTANT=3, NUMERICAL_CONSTANT=4, 
		STRING_CONSTANT=5, POW=6, MULT=7, DIV=8, PLUS=9, MINUS=10, CONCAT=11, 
		EQUAL=12, NOT_EQUAL=13, LESS_OR_EQUAL_THAN=14, LESS_THAN=15, GREATER_OR_EQUAL_THAN=16, 
		GREATER_THAN=17, PERCENT=18, SEMICOLON=19, COLON=20, OPEN_BRACE=21, CLOSE_BRACE=22, 
		OPEN_CURLY=23, CLOSE_CURLY=24, COMMA=25, SPACE=26, INTERSECT=27, SPILL=28, 
		BOOK_PREFIX=29, BANG_REFERENCE=30, SHEET_RANGE_PREFIX=31, SINGLE_SHEET_PREFIX=32, 
		A1_CELL=33, A1_SPAN_REFERENCE=34, REF_FUNCTION_LIST=35, CELL_FUNCTION_LIST=36, 
		USER_DEFINED_FUNCTION_NAME=37, NAME=38, INTRA_TABLE_REFERENCE=39, DDE_ITEM=40, 
		BANG_NAME=41;
	public const int
		RULE_formula = 0, RULE_expression = 1, RULE_concat_expression = 2, RULE_additive_expression = 3, 
		RULE_multiplying_expression = 4, RULE_pow_expression = 5, RULE_percent_expression = 6, 
		RULE_prefix_atom_expression = 7, RULE_atom_expression = 8, RULE_ref_expression = 9, 
		RULE_ref_implicit_expression = 10, RULE_ref_intersection_expression = 11, 
		RULE_ref_range_expression = 12, RULE_ref_spill_expression = 13, RULE_ref_atom_expression = 14, 
		RULE_constant = 15, RULE_constant_list_rows = 16, RULE_constant_list_row = 17, 
		RULE_cell_reference = 18, RULE_a1_reference = 19, RULE_argument_list = 20, 
		RULE_arg_expression = 21, RULE_arg_concat_expression = 22, RULE_arg_additive_expression = 23, 
		RULE_arg_multiplying_expression = 24, RULE_arg_pow_expression = 25, RULE_arg_percent_expression = 26, 
		RULE_arg_prefix_atom_expression = 27, RULE_arg_atom_expression = 28, RULE_name_reference = 29, 
		RULE_dde_reference = 30, RULE_structure_reference = 31, RULE_table_identifier = 32, 
		RULE_table_name = 33, RULE_ref_function_call = 34, RULE_function_call = 35;
	public static readonly string[] ruleNames = {
		"formula", "expression", "concat_expression", "additive_expression", "multiplying_expression", 
		"pow_expression", "percent_expression", "prefix_atom_expression", "atom_expression", 
		"ref_expression", "ref_implicit_expression", "ref_intersection_expression", 
		"ref_range_expression", "ref_spill_expression", "ref_atom_expression", 
		"constant", "constant_list_rows", "constant_list_row", "cell_reference", 
		"a1_reference", "argument_list", "arg_expression", "arg_concat_expression", 
		"arg_additive_expression", "arg_multiplying_expression", "arg_pow_expression", 
		"arg_percent_expression", "arg_prefix_atom_expression", "arg_atom_expression", 
		"name_reference", "dde_reference", "structure_reference", "table_identifier", 
		"table_name", "ref_function_call", "function_call"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "REF_CONSTANT", "NONREF_ERRORS", "LOGICAL_CONSTANT", "NUMERICAL_CONSTANT", 
		"STRING_CONSTANT", "POW", "MULT", "DIV", "PLUS", "MINUS", "CONCAT", "EQUAL", 
		"NOT_EQUAL", "LESS_OR_EQUAL_THAN", "LESS_THAN", "GREATER_OR_EQUAL_THAN", 
		"GREATER_THAN", "PERCENT", "SEMICOLON", "COLON", "OPEN_BRACE", "CLOSE_BRACE", 
		"OPEN_CURLY", "CLOSE_CURLY", "COMMA", "SPACE", "INTERSECT", "SPILL", "BOOK_PREFIX", 
		"BANG_REFERENCE", "SHEET_RANGE_PREFIX", "SINGLE_SHEET_PREFIX", "A1_CELL", 
		"A1_SPAN_REFERENCE", "REF_FUNCTION_LIST", "CELL_FUNCTION_LIST", "USER_DEFINED_FUNCTION_NAME", 
		"NAME", "INTRA_TABLE_REFERENCE", "DDE_ITEM", "BANG_NAME"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FormulaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static FormulaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FormulaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FormulaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FormulaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FormulaParser.Eof, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formula; } }
	}

	[RuleVersion(0)]
	public FormulaContext formula() {
		FormulaContext _localctx = new FormulaContext(Context, State);
		EnterRule(_localctx, 0, RULE_formula);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			expression();
			State = 73;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Concat_expressionContext[] concat_expression() {
			return GetRuleContexts<Concat_expressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Concat_expressionContext concat_expression(int i) {
			return GetRuleContext<Concat_expressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] GREATER_OR_EQUAL_THAN() { return GetTokens(FormulaParser.GREATER_OR_EQUAL_THAN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GREATER_OR_EQUAL_THAN(int i) {
			return GetToken(FormulaParser.GREATER_OR_EQUAL_THAN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LESS_OR_EQUAL_THAN() { return GetTokens(FormulaParser.LESS_OR_EQUAL_THAN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LESS_OR_EQUAL_THAN(int i) {
			return GetToken(FormulaParser.LESS_OR_EQUAL_THAN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LESS_THAN() { return GetTokens(FormulaParser.LESS_THAN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LESS_THAN(int i) {
			return GetToken(FormulaParser.LESS_THAN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] GREATER_THAN() { return GetTokens(FormulaParser.GREATER_THAN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GREATER_THAN(int i) {
			return GetToken(FormulaParser.GREATER_THAN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NOT_EQUAL() { return GetTokens(FormulaParser.NOT_EQUAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT_EQUAL(int i) {
			return GetToken(FormulaParser.NOT_EQUAL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] EQUAL() { return GetTokens(FormulaParser.EQUAL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL(int i) {
			return GetToken(FormulaParser.EQUAL, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			concat_expression();
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 258048L) != 0)) {
				{
				{
				State = 76;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 258048L) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 77;
				concat_expression();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Concat_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Additive_expressionContext[] additive_expression() {
			return GetRuleContexts<Additive_expressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Additive_expressionContext additive_expression(int i) {
			return GetRuleContext<Additive_expressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] CONCAT() { return GetTokens(FormulaParser.CONCAT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONCAT(int i) {
			return GetToken(FormulaParser.CONCAT, i);
		}
		public Concat_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_concat_expression; } }
	}

	[RuleVersion(0)]
	public Concat_expressionContext concat_expression() {
		Concat_expressionContext _localctx = new Concat_expressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_concat_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			additive_expression();
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==CONCAT) {
				{
				{
				State = 84;
				Match(CONCAT);
				State = 85;
				additive_expression();
				}
				}
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Additive_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Multiplying_expressionContext[] multiplying_expression() {
			return GetRuleContexts<Multiplying_expressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Multiplying_expressionContext multiplying_expression(int i) {
			return GetRuleContext<Multiplying_expressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PLUS() { return GetTokens(FormulaParser.PLUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS(int i) {
			return GetToken(FormulaParser.PLUS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MINUS() { return GetTokens(FormulaParser.MINUS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS(int i) {
			return GetToken(FormulaParser.MINUS, i);
		}
		public Additive_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_additive_expression; } }
	}

	[RuleVersion(0)]
	public Additive_expressionContext additive_expression() {
		Additive_expressionContext _localctx = new Additive_expressionContext(Context, State);
		EnterRule(_localctx, 6, RULE_additive_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			multiplying_expression();
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				State = 92;
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 93;
				multiplying_expression();
				}
				}
				State = 98;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Multiplying_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Pow_expressionContext[] pow_expression() {
			return GetRuleContexts<Pow_expressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Pow_expressionContext pow_expression(int i) {
			return GetRuleContext<Pow_expressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MULT() { return GetTokens(FormulaParser.MULT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MULT(int i) {
			return GetToken(FormulaParser.MULT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DIV() { return GetTokens(FormulaParser.DIV); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV(int i) {
			return GetToken(FormulaParser.DIV, i);
		}
		public Multiplying_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multiplying_expression; } }
	}

	[RuleVersion(0)]
	public Multiplying_expressionContext multiplying_expression() {
		Multiplying_expressionContext _localctx = new Multiplying_expressionContext(Context, State);
		EnterRule(_localctx, 8, RULE_multiplying_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			pow_expression();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==MULT || _la==DIV) {
				{
				{
				State = 100;
				_la = TokenStream.LA(1);
				if ( !(_la==MULT || _la==DIV) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 101;
				pow_expression();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Pow_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Percent_expressionContext[] percent_expression() {
			return GetRuleContexts<Percent_expressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Percent_expressionContext percent_expression(int i) {
			return GetRuleContext<Percent_expressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] POW() { return GetTokens(FormulaParser.POW); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode POW(int i) {
			return GetToken(FormulaParser.POW, i);
		}
		public Pow_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pow_expression; } }
	}

	[RuleVersion(0)]
	public Pow_expressionContext pow_expression() {
		Pow_expressionContext _localctx = new Pow_expressionContext(Context, State);
		EnterRule(_localctx, 10, RULE_pow_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			percent_expression();
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==POW) {
				{
				{
				State = 108;
				Match(POW);
				State = 109;
				percent_expression();
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Percent_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Prefix_atom_expressionContext prefix_atom_expression() {
			return GetRuleContext<Prefix_atom_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PERCENT() { return GetTokens(FormulaParser.PERCENT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PERCENT(int i) {
			return GetToken(FormulaParser.PERCENT, i);
		}
		public Percent_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_percent_expression; } }
	}

	[RuleVersion(0)]
	public Percent_expressionContext percent_expression() {
		Percent_expressionContext _localctx = new Percent_expressionContext(Context, State);
		EnterRule(_localctx, 12, RULE_percent_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			prefix_atom_expression();
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PERCENT) {
				{
				{
				State = 116;
				Match(PERCENT);
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Prefix_atom_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Prefix_atom_expressionContext prefix_atom_expression() {
			return GetRuleContext<Prefix_atom_expressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS() { return GetToken(FormulaParser.PLUS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS() { return GetToken(FormulaParser.MINUS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Atom_expressionContext atom_expression() {
			return GetRuleContext<Atom_expressionContext>(0);
		}
		public Prefix_atom_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prefix_atom_expression; } }
	}

	[RuleVersion(0)]
	public Prefix_atom_expressionContext prefix_atom_expression() {
		Prefix_atom_expressionContext _localctx = new Prefix_atom_expressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_prefix_atom_expression);
		int _la;
		try {
			State = 125;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 122;
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 123;
				prefix_atom_expression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124;
				atom_expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Atom_expressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConstantContext constant() {
			return GetRuleContext<ConstantContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACE() { return GetToken(FormulaParser.OPEN_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACE() { return GetToken(FormulaParser.CLOSE_BRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Function_callContext function_call() {
			return GetRuleContext<Function_callContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Ref_expressionContext ref_expression() {
			return GetRuleContext<Ref_expressionContext>(0);
		}
		public Atom_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom_expression; } }
	}
